--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
     "apexcharts": "^5.3.6",
+    "axios": "^1.13.2",
     "vue": "^3.5.24",
     "vue3-apexcharts": "^1.10.0"
   },
